--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -10,3 +10,11 @@ $submitColorDisabled: #EEEEEE;
 $submitColorActive: #7BAE73;
 // transition
 $transitionlinear: all .2s linear;
+
+// mediaQuery breakpoints
+$b1440: 1439.98+px;
+$b1280: 1279.99+px;
+$b1024: 1023.99+px;
+$b992: 991.98+px;
+$b768: 767.98+px;
+$b480: 479.98+px;
